2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c: (parse_syslog): Kill. Not used anymore.
	(destroy): If the opened log is zipped, don't save it in gconf.
	Remove the GNOMELOCALEDIR define from logview.c, it's already in Makefile.am

2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c (destroy): Only save the size and opened log when
	destroying the last window.

	* userprefs.c (prefs_create_defaults): open one of standard logs
	when there is no previous selection in gconf.
	(prefs_load): Read previous log and window size in gconf.
	(prefs_save): Store the opened log and window size in gconf.

	* logview.c (CreateMainWin): Use the width/height stored in gconf
	for creating the window.

	* userprefs.c: Renamed the file from userprefsdialog.c

	* logrtns.c: Remove the ifdef'ed functions, which have not been
	compiled or used in 2 years.

	* calendar.c: Remove a bunch of useless defines.

	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
	permissions instead of calling an extra gnome_vfs_get_file_info.
	(GetLogSize): remove. Not used anywhere anymore.
	(ParseLine): Fix a bug.
	(ReadLogStats): Fix the parsing of dates in the log.
	(OpenLogFile): When opening a zipped log, don't use an external
	program to unzip it in a tmp directory. Use the gnome-vfs gzip
	method.
	(OpenLogFile): Correctly free the filename when we open a zipped log.

2004-11-03  Vincent Noel  <vnoel@cox.net>

	* logview.c (CloseLogMenu): Close the calendar when closing the log.
	(CloseLogMenu): Same for details window.
	(LoadLogMenu): Don't destroy the filechooser when we're done with
	it, keep it around for later.

	* calendar.c (CalendarMenu): Make sure to re-create calendar data
	if there is none.

	* logview.h: Remove unused var.

	* logrtns.c (ReadLogStats): Remove unused variables.

	* monitor.c (monitor_stop): Close the handle.

	* logrtns.c (ReadLastPage): Only keep a handle opened on the log
	if we are monitoring. Otherwise, close all handles.